<resources>
    <string name="app_name">Client</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Student name</string>
    <string name="age">Age</string>
    <string name="student_class">Class</string>
    <string name="create_student">Create student</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="search_student">Search student</string>
    <string name="no_data_found">No data</string>
    <string name="there_no_student_found">No data student</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear data</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="by_average">Sort by average grade</string>
    <string name="by_average_of_class">Sort by average grade of class</string>
    <string name="by_default">Default</string>
    <string name="math_grade">Math\n%s</string>
    <string name="english_grade_detail">Eng\n%s</string>
    <string name="literature_grade">Liter\n%s</string>
    <string name="physic_grade">Phys\n%s</string>
    <string name="chemistry_grade">Chem\n%s</string>
    <string name="english">English</string>
    <string name="math">Math</string>
    <string name="literature">Literature</string>
    <string name="physic">Physic</string>
    <string name="chemistry">Chemistry</string>
    <string name="average">Avg:\n%s</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="update_student">Update Student</string>
    <string name="create_student_transcript">Create student transcript</string>
    <string name="score_error">Invalid score</string>


</resources>