<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateStudentFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/create_student_transcript"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/tf_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/age_class"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_dialog">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
<LinearLayout
    android:id="@+id/age_class"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"

    tools:ignore="DisableBaselineAlignment,MissingConstraints"
    app:layout_constraintBottom_toTopOf="@+id/tf_math"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tf_name"
    >
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_age"
        android:layout_marginEnd="8dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        app:layout_constraintBottom_toTopOf="@+id/tf_class"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_class"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/student_class"
        app:layout_constraintBottom_toTopOf="@+id/tf_math"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_age">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_math"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/math"
            app:layout_constraintBottom_toTopOf="@+id/tf_english"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age_class">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_math"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_english"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/english"
            app:layout_constraintBottom_toTopOf="@+id/tf_literature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tf_math">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_literature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/literature"
            app:layout_constraintBottom_toTopOf="@+id/tf_physic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tf_english">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_literature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_physic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/physic"
            app:layout_constraintBottom_toTopOf="@+id/tf_chemistry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tf_literature">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_physic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_chemistry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/chemistry"
            app:layout_constraintBottom_toTopOf="@+id/layoutButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tf_physic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_chemistry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/layoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tf_chemistry">


            <Button
                android:id="@+id/btn_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btn_submit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>