<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/pad_5"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/songCardView"
        android:padding="@dimen/pad_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/pad_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/pad_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/songCardView"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:weightSum="6"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/txtStudentName"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/pad_10"
                    android:ellipsize="end"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:maxLines="1"
                    android:text="@string/name"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtStudentAge"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/pad_10"
                    android:gravity="end"
                    android:text="@string/age"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtStudentClass"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:maxLines="1"
                    android:text="@string/student_class"
                    android:textSize="@dimen/txt_16"
                    android:textStyle="bold" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />
                <!-- Math Grade -->
                <TextView
                    android:id="@+id/txtMathGrade"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/math"
                    />
                <!-- Divider Views -->
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />
                <!-- English Grade -->
                <TextView
                    android:id="@+id/txtEnglishGrade"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/english"
                    />
                <!-- Divider Views -->
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />
                <!-- Literature Grade -->
                <TextView
                    android:id="@+id/txtLiteratureGrade"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/literature"
                    />
                <!-- Divider Views -->
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />
                <!-- Physic Grade -->
                <TextView
                    android:id="@+id/txtPhysicGrade"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/physic"
                    />
                <!-- Divider Views -->
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />
                <!-- Chemistry Grade -->
                <TextView
                    android:id="@+id/txtChemistryGrade"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/chemistry"
                    />
                <!-- Divider Views -->
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />
                <!-- Average -->
                <TextView
                    android:id="@+id/txtAverage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/average"
                    android:textStyle="bold" />

                <!-- Divider Views -->
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>