<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/searchView"
        app:layout_anchorGravity="center"
        app:layout_behavior="@string/searchbar_scrolling_view_behavior">

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.search.SearchBar
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search" />

    <!--    SearchView-->
    <com.google.android.material.search.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/search_student"
        app:layout_anchor="@id/search_bar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearchStudents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/pad_10" />

        <LinearLayout
            android:id="@+id/layoutNoDataSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/pad_20"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:lineSpacingExtra="8dp"
                android:text="@string/there_no_student_found"
                android:textSize="16sp" />

            <!--    SearchView NO DATA-->
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_fileName="no_data_found.json"
                app:lottie_loop="true" />
        </LinearLayout>

    </com.google.android.material.search.SearchView>

    <LinearLayout
        android:id="@+id/layoutClearAllProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="@dimen/pad_10"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/pad_10">

            <LinearLayout
                android:id="@+id/layoutSortText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingVertical="@dimen/pad_10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtContextSort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/pad_5"
                    android:layout_weight="2"
                    android:text="@string/sort"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imgFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/sort_ascending" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListStudents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/pad_10" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutNoData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/noInternetTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_data_found"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_fileName="no_data_found.json"
            app:lottie_loop="true" />


    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icons8_plus_48" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>